KConfig/src/parser/KConfig5Parser.java
package parser;
// Generated from KConfig5.g4 by ANTLR 4.5
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class KConfig5Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		CONFIG=10, MENUCONFIG=11, CHOICE=12, ENDCHOICE=13, COMMENT=14, MENU=15, 
		ENDMENU=16, MAINMENU=17, SOURCE=18, DEPENDS=19, ON=20, PROMPT=21, OPTION=22, 
		SELECT=23, DEFAULT=24, RANGE=25, OPTIONAL=26, IF=27, ENDIF=28, ENV=29, 
		DEFCONFIG_LIST=30, TRISTATE=31, BOOL=32, BOOLEAN=33, INT=34, STRING=35, 
		HEX=36, ALLNOCONFIG_Y=37, MODULES=38, VISIBLE=39, Reserved_words=40, SYMBOL=41, 
		WORD_QUOTE=42, SLASH=43, DASH=44, DASHES=45, NEWLINE=46, WS=47;
	public static final int
		RULE_inicial = 0, RULE_config_stmts = 1, RULE_config_menu_entry = 2, RULE_config_options = 3, 
		RULE_config_option = 4, RULE_misc_option = 5, RULE_menuconfig_menu_entry = 6, 
		RULE_menuconfig_options = 7, RULE_choice_menu_entry = 8, RULE_choice_options = 9, 
		RULE_choice_option = 10, RULE_choice_block = 11, RULE_comment_menu_entry = 12, 
		RULE_comment_options = 13, RULE_comment_option = 14, RULE_menu_menu_entry = 15, 
		RULE_menu_options = 16, RULE_menu_option = 17, RULE_menu_block = 18, RULE_if_menu_entry = 19, 
		RULE_ifmenu_expr = 20, RULE_if_expr = 21, RULE_expr = 22, RULE_or_expr = 23, 
		RULE_and_expr = 24, RULE_unary_expr = 25, RULE_equals_expr = 26, RULE_type = 27, 
		RULE_type_choice = 28, RULE_visible = 29, RULE_primary = 30, RULE_words = 31;
	public static final String[] ruleNames = {
		"inicial", "config_stmts", "config_menu_entry", "config_options", "config_option", 
		"misc_option", "menuconfig_menu_entry", "menuconfig_options", "choice_menu_entry", 
		"choice_options", "choice_option", "choice_block", "comment_menu_entry", 
		"comment_options", "comment_option", "menu_menu_entry", "menu_options", 
		"menu_option", "menu_block", "if_menu_entry", "ifmenu_expr", "if_expr", 
		"expr", "or_expr", "and_expr", "unary_expr", "equals_expr", "type", "type_choice", 
		"visible", "primary", "words"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "';'", "'='", "'TODO'", "'!'", "'||'", "'&&'", "'!='", "'('", "')'", 
		"'config'", "'menuconfig'", "'choice'", "'endchoice'", "'comment'", "'menu'", 
		"'endmenu'", "'mainmenu'", "'source'", "'depends'", "'on'", "'prompt'", 
		"'option'", "'select'", null, "'range'", "'optional'", "'if'", "'endif'", 
		"'env'", "'defconfig_list'", "'tristate'", "'bool'", "'boolean'", "'int'", 
		"'string'", "'hex'", "'allnoconfig_y'", "'modules'", "'visible'", null, 
		null, null, "'\\'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, "CONFIG", 
		"MENUCONFIG", "CHOICE", "ENDCHOICE", "COMMENT", "MENU", "ENDMENU", "MAINMENU", 
		"SOURCE", "DEPENDS", "ON", "PROMPT", "OPTION", "SELECT", "DEFAULT", "RANGE", 
		"OPTIONAL", "IF", "ENDIF", "ENV", "DEFCONFIG_LIST", "TRISTATE", "BOOL", 
		"BOOLEAN", "INT", "STRING", "HEX", "ALLNOCONFIG_Y", "MODULES", "VISIBLE", 
		"Reserved_words", "SYMBOL", "WORD_QUOTE", "SLASH", "DASH", "DASHES", "NEWLINE", 
		"WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "KConfig5.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public KConfig5Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class InicialContext extends ParserRuleContext {
		public List<Config_stmtsContext> config_stmts() {
			return getRuleContexts(Config_stmtsContext.class);
		}
		public Config_stmtsContext config_stmts(int i) {
			return getRuleContext(Config_stmtsContext.class,i);
		}
		public List<Menuconfig_menu_entryContext> menuconfig_menu_entry() {
			return getRuleContexts(Menuconfig_menu_entryContext.class);
		}
		public Menuconfig_menu_entryContext menuconfig_menu_entry(int i) {
			return getRuleContext(Menuconfig_menu_entryContext.class,i);
		}
		public List<Choice_menu_entryContext> choice_menu_entry() {
			return getRuleContexts(Choice_menu_entryContext.class);
		}
		public Choice_menu_entryContext choice_menu_entry(int i) {
			return getRuleContext(Choice_menu_entryContext.class,i);
		}
		public List<Comment_menu_entryContext> comment_menu_entry() {
			return getRuleContexts(Comment_menu_entryContext.class);
		}
		public Comment_menu_entryContext comment_menu_entry(int i) {
			return getRuleContext(Comment_menu_entryContext.class,i);
		}
		public List<Menu_menu_entryContext> menu_menu_entry() {
			return getRuleContexts(Menu_menu_entryContext.class);
		}
		public Menu_menu_entryContext menu_menu_entry(int i) {
			return getRuleContext(Menu_menu_entryContext.class,i);
		}
		public List<If_menu_entryContext> if_menu_entry() {
			return getRuleContexts(If_menu_entryContext.class);
		}
		public If_menu_entryContext if_menu_entry(int i) {
			return getRuleContext(If_menu_entryContext.class,i);
		}
		public InicialContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inicial; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KConfig5Listener ) ((KConfig5Listener)listener).enterInicial(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KConfig5Listener ) ((KConfig5Listener)listener).exitInicial(this);
		}
	}

	public final InicialContext inicial() throws RecognitionException {
		InicialContext _localctx = new InicialContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_inicial);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(70); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					setState(70);
					switch (_input.LA(1)) {
					case CONFIG:
						{
						setState(64);
						config_stmts();
						}
						break;
					case MENUCONFIG:
						{
						setState(65);
						menuconfig_menu_entry();
						}
						break;
					case CHOICE:
						{
						setState(66);
						choice_menu_entry();
						}
						break;
					case COMMENT:
						{
						setState(67);
						comment_menu_entry();
						}
						break;
					case MENU:
						{
						setState(68);
						menu_menu_entry();
						}
						break;
					case IF:
						{
						setState(69);
						if_menu_entry();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(72); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Config_stmtsContext extends ParserRuleContext {
		public List<Config_menu_entryContext> config_menu_entry() {
			return getRuleContexts(Config_menu_entryContext.class);
		}
		public Config_menu_entryContext config_menu_entry(int i) {
			return getRuleContext(Config_menu_entryContext.class,i);
		}
		public Config_stmtsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_config_stmts; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KConfig5Listener ) ((KConfig5Listener)listener).enterConfig_stmts(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KConfig5Listener ) ((KConfig5Listener)listener).exitConfig_stmts(this);
		}
	}

	public final Config_stmtsContext config_stmts() throws RecognitionException {
		Config_stmtsContext _localctx = new Config_stmtsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_config_stmts);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(75); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(74);
					config_menu_entry();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(77); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Config_menu_entryContext extends ParserRuleContext {
		public TerminalNode CONFIG() { return getToken(KConfig5Parser.CONFIG, 0); }
		public TerminalNode SYMBOL() { return getToken(KConfig5Parser.SYMBOL, 0); }
		public List<TerminalNode> NEWLINE() { return getTokens(KConfig5Parser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(KConfig5Parser.NEWLINE, i);
		}
		public List<Config_optionsContext> config_options() {
			return getRuleContexts(Config_optionsContext.class);
		}
		public Config_optionsContext config_options(int i) {
			return getRuleContext(Config_optionsContext.class,i);
		}
		public Config_menu_entryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_config_menu_entry; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KConfig5Listener ) ((KConfig5Listener)listener).enterConfig_menu_entry(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KConfig5Listener ) ((KConfig5Listener)listener).exitConfig_menu_entry(this);
		}
	}

	public final Config_menu_entryContext config_menu_entry() throws RecognitionException {
		Config_menu_entryContext _localctx = new Config_menu_entryContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_config_menu_entry);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			match(CONFIG);
			setState(80);
			match(SYMBOL);
			setState(81);
			match(NEWLINE);
			setState(89); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(82);
				config_options();
				setState(86);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
				while ( _alt!=1 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1+1 ) {
						{
						{
						setState(83);
						match(NEWLINE);
						}
						} 
					}
					setState(88);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
				}
				}
				}
				setState(91); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << DEPENDS) | (1L << PROMPT) | (1L << OPTION) | (1L << SELECT) | (1L << DEFAULT) | (1L << RANGE) | (1L << OPTIONAL) | (1L << TRISTATE) | (1L << BOOL) | (1L << BOOLEAN) | (1L << INT) | (1L << STRING) | (1L << HEX))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Config_optionsContext extends ParserRuleContext {
		public Config_optionContext config_option() {
			return getRuleContext(Config_optionContext.class,0);
		}
		public Config_optionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_config_options; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KConfig5Listener ) ((KConfig5Listener)listener).enterConfig_options(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KConfig5Listener ) ((KConfig5Listener)listener).exitConfig_options(this);
		}
	}

	public final Config_optionsContext config_options() throws RecognitionException {
		Config_optionsContext _localctx = new Config_optionsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_config_options);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			config_option();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Config_optionContext extends ParserRuleContext {
		public Config_optionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_config_option; }
	 
		public Config_optionContext() { }
		public void copyFrom(Config_optionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Config_op_dependsContext extends Config_optionContext {
		public TerminalNode DEPENDS() { return getToken(KConfig5Parser.DEPENDS, 0); }
		public TerminalNode ON() { return getToken(KConfig5Parser.ON, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public Config_op_dependsContext(Config_optionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KConfig5Listener ) ((KConfig5Listener)listener).enterConfig_op_depends(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KConfig5Listener ) ((KConfig5Listener)listener).exitConfig_op_depends(this);
		}
	}
	public static class Config_op_selectContext extends Config_optionContext {
		public TerminalNode SELECT() { return getToken(KConfig5Parser.SELECT, 0); }
		public TerminalNode SYMBOL() { return getToken(KConfig5Parser.SYMBOL, 0); }
		public If_exprContext if_expr() {
			return getRuleContext(If_exprContext.class,0);
		}
		public Config_op_selectContext(Config_optionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KConfig5Listener ) ((KConfig5Listener)listener).enterConfig_op_select(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KConfig5Listener ) ((KConfig5Listener)listener).exitConfig_op_select(this);
		}
	}
	public static class Config_op_optionalContext extends Config_optionContext {
		public TerminalNode OPTIONAL() { return getToken(KConfig5Parser.OPTIONAL, 0); }
		public If_exprContext if_expr() {
			return getRuleContext(If_exprContext.class,0);
		}
		public Config_op_optionalContext(Config_optionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KConfig5Listener ) ((KConfig5Listener)listener).enterConfig_op_optional(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KConfig5Listener ) ((KConfig5Listener)listener).exitConfig_op_optional(this);
		}
	}
	public static class Config_op_promptContext extends Config_optionContext {
		public TerminalNode PROMPT() { return getToken(KConfig5Parser.PROMPT, 0); }
		public TerminalNode WORD_QUOTE() { return getToken(KConfig5Parser.WORD_QUOTE, 0); }
		public If_exprContext if_expr() {
			return getRuleContext(If_exprContext.class,0);
		}
		public Config_op_promptContext(Config_optionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KConfig5Listener ) ((KConfig5Listener)listener).enterConfig_op_prompt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KConfig5Listener ) ((KConfig5Listener)listener).exitConfig_op_prompt(this);
		}
	}
	public static class Config_op_defaultContext extends Config_optionContext {
		public TerminalNode DEFAULT() { return getToken(KConfig5Parser.DEFAULT, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public If_exprContext if_expr() {
			return getRuleContext(If_exprContext.class,0);
		}
		public Config_op_defaultContext(Config_optionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KConfig5Listener ) ((KConfig5Listener)listener).enterConfig_op_default(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KConfig5Listener ) ((KConfig5Listener)listener).exitConfig_op_default(this);
		}
	}
	public static class Config_op_rangeContext extends Config_optionContext {
		public TerminalNode RANGE() { return getToken(KConfig5Parser.RANGE, 0); }
		public List<TerminalNode> SYMBOL() { return getTokens(KConfig5Parser.SYMBOL); }
		public TerminalNode SYMBOL(int i) {
			return getToken(KConfig5Parser.SYMBOL, i);
		}
		public If_exprContext if_expr() {
			return getRuleContext(If_exprContext.class,0);
		}
		public Config_op_rangeContext(Config_optionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KConfig5Listener ) ((KConfig5Listener)listener).enterConfig_op_range(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KConfig5Listener ) ((KConfig5Listener)listener).exitConfig_op_range(this);
		}
	}
	public static class Config_op_typeContext extends Config_optionContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode WORD_QUOTE() { return getToken(KConfig5Parser.WORD_QUOTE, 0); }
		public If_exprContext if_expr() {
			return getRuleContext(If_exprContext.class,0);
		}
		public Config_op_typeContext(Config_optionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KConfig5Listener ) ((KConfig5Listener)listener).enterConfig_op_type(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KConfig5Listener ) ((KConfig5Listener)listener).exitConfig_op_type(this);
		}
	}
	public static class Config_op_optionContext extends Config_optionContext {
		public TerminalNode OPTION() { return getToken(KConfig5Parser.OPTION, 0); }
		public Misc_optionContext misc_option() {
			return getRuleContext(Misc_optionContext.class,0);
		}
		public If_exprContext if_expr() {
			return getRuleContext(If_exprContext.class,0);
		}
		public Config_op_optionContext(Config_optionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KConfig5Listener ) ((KConfig5Listener)listener).enterConfig_op_option(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KConfig5Listener ) ((KConfig5Listener)listener).exitConfig_op_option(this);
		}
	}

	public final Config_optionContext config_option() throws RecognitionException {
		Config_optionContext _localctx = new Config_optionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_config_option);
		int _la;
		try {
			setState(138);
			switch (_input.LA(1)) {
			case TRISTATE:
			case BOOL:
			case BOOLEAN:
			case INT:
			case STRING:
			case HEX:
				_localctx = new Config_op_typeContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(95);
				type();
				setState(97);
				_la = _input.LA(1);
				if (_la==WORD_QUOTE) {
					{
					setState(96);
					match(WORD_QUOTE);
					}
				}

				setState(100);
				switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
				case 1:
					{
					setState(99);
					if_expr();
					}
					break;
				}
				setState(103);
				_la = _input.LA(1);
				if (_la==T__0) {
					{
					setState(102);
					match(T__0);
					}
				}

				}
				break;
			case DEPENDS:
				_localctx = new Config_op_dependsContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(105);
				match(DEPENDS);
				setState(106);
				match(ON);
				setState(107);
				expr();
				}
				break;
			case PROMPT:
				_localctx = new Config_op_promptContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(108);
				match(PROMPT);
				setState(109);
				match(WORD_QUOTE);
				setState(111);
				switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
				case 1:
					{
					setState(110);
					if_expr();
					}
					break;
				}
				}
				break;
			case SELECT:
				_localctx = new Config_op_selectContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(113);
				match(SELECT);
				setState(114);
				match(SYMBOL);
				setState(116);
				switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
				case 1:
					{
					setState(115);
					if_expr();
					}
					break;
				}
				}
				break;
			case DEFAULT:
				_localctx = new Config_op_defaultContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(118);
				match(DEFAULT);
				setState(119);
				expr();
				setState(121);
				switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
				case 1:
					{
					setState(120);
					if_expr();
					}
					break;
				}
				}
				break;
			case RANGE:
				_localctx = new Config_op_rangeContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(123);
				match(RANGE);
				setState(124);
				match(SYMBOL);
				setState(125);
				match(SYMBOL);
				setState(127);
				switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
				case 1:
					{
					setState(126);
					if_expr();
					}
					break;
				}
				}
				break;
			case OPTION:
				_localctx = new Config_op_optionContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(129);
				match(OPTION);
				setState(130);
				misc_option();
				setState(132);
				switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
				case 1:
					{
					setState(131);
					if_expr();
					}
					break;
				}
				}
				break;
			case OPTIONAL:
				_localctx = new Config_op_optionalContext(_localctx);
				enterOuterAlt(_localctx, 8);
				{
				setState(134);
				match(OPTIONAL);
				setState(136);
				switch ( getInterpreter().adaptivePredict(_input,13,_ctx) ) {
				case 1:
					{
					setState(135);
					if_expr();
					}
					break;
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Misc_optionContext extends ParserRuleContext {
		public TerminalNode ENV() { return getToken(KConfig5Parser.ENV, 0); }
		public TerminalNode WORD_QUOTE() { return getToken(KConfig5Parser.WORD_QUOTE, 0); }
		public TerminalNode DEFCONFIG_LIST() { return getToken(KConfig5Parser.DEFCONFIG_LIST, 0); }
		public TerminalNode ALLNOCONFIG_Y() { return getToken(KConfig5Parser.ALLNOCONFIG_Y, 0); }
		public TerminalNode MODULES() { return getToken(KConfig5Parser.MODULES, 0); }
		public Misc_optionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_misc_option; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KConfig5Listener ) ((KConfig5Listener)listener).enterMisc_option(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KConfig5Listener ) ((KConfig5Listener)listener).exitMisc_option(this);
		}
	}

	public final Misc_optionContext misc_option() throws RecognitionException {
		Misc_optionContext _localctx = new Misc_optionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_misc_option);
		try {
			setState(146);
			switch (_input.LA(1)) {
			case ENV:
				enterOuterAlt(_localctx, 1);
				{
				setState(140);
				match(ENV);
				setState(141);
				match(T__1);
				setState(142);
				match(WORD_QUOTE);
				}
				break;
			case DEFCONFIG_LIST:
				enterOuterAlt(_localctx, 2);
				{
				setState(143);
				match(DEFCONFIG_LIST);
				}
				break;
			case ALLNOCONFIG_Y:
				enterOuterAlt(_localctx, 3);
				{
				setState(144);
				match(ALLNOCONFIG_Y);
				}
				break;
			case MODULES:
				enterOuterAlt(_localctx, 4);
				{
				setState(145);
				match(MODULES);
				}
				break;
